Хранилище. Переход на Spring Data JPA (с JDBCTemplate и Hibernate).